--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,5 +93,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
+    //BaseRecycleViewer
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
+
+    // eventbus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
 
 }
