--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.example.dagger2example"
+        applicationId "com.eprtech.etrans"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
@@ -31,6 +32,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
 
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -109,10 +111,12 @@ dependencies {
     // eventbus
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    //google places
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
     implementation 'com.google.android.libraries.places:places:2.0.0'
 
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.android.support:multidex:1.0.3'
 
 
