--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,12 @@
         android:theme="@style/AppTheme">
         <service
             android:name=".firebase.MyFirebaseMassageService"
-            android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+
+        </service>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
